# cpex

./: .gitignore  .gitmodules  Makefile  Makefile.am  configure.ac  cpex.cabal  cpex.pro  cpex.qm  cpex.qrc  cpex.ts  csperror.cpp  csperror.h  cspmsession.cpp  cspmsession.h  haskell.pri  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  native.cpp  phils8.csp  probe.cabal  programstate.cpp  programstate.h  which-hs
delegate/: processitemdelegate.cpp  processitemdelegate.h
haskell/: which_hs
haskell/CSPM/: Foreign.hs
haskell/Cpex/: Foreign.hs  Transitions.hs
model/: event.cpp  event.h  expression.cpp  expression.h  inspectmodel.cpp  inspectmodel.h  process.cpp  process.h  processitem.cpp  processitem.h  processmodel.cpp  processmodel.h  ptypes.cpp  ptypes.h  sessionmodel.cpp  sessionmodel.h  transition.cpp  transition.h  transitionmodel.cpp  transitionmodel.h
src/: Main.hs
src/CSPM/: Foreign.hs
src/Cpex/: Transitions.hs
view/: displaystring.cpp  displaystring.h
widget/: clickablelabel.cpp  clickablelabel.h  errordialog.cpp  errordialog.h  processtree.cpp  processtree.h  sessiontree.cpp  sessiontree.h  tab.cpp  tab.h  tracelistwidget.cpp  tracelistwidget.h
