Name: cpex
Category: Concurrency
Build-type: Simple
Cabal-version: >=1.9.2
Version: 0.0.1

Library
    Build-Depends:
        base >= 4,
        containers >= 0.4,
        libcspm >= 0.3,
        mtl >= 2.1

    Exposed-Modules:
        CSPM.Foreign,
        Cpex.Transitions

    GHC-Options: -O
    Hs-Source-Dirs: src

Executable transitions
    Main-Is: Main.hs
    Hs-Source-Dirs: src
    GHC-Options: -O

    Build-Depends:
        base >= 4 && < 5,
        containers >= 0.4,
        libcspm >= 0.3,
        mtl >= 2.1
